# resolution-news-aggregator

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  build  compose.yaml  config.toml  devenv.nix  dynamic.yml
.github/workflows/: docker_build.yml
client/: Cargo.toml  index.html  nginx.conf
client/assets/: manifest.json  sw.js
client/src/: app.rs  db.rs  dt.rs  lib.rs  local_unify.rs  main.rs  utils.rs  wasm_websocket.rs
client/src/comp/: mod.rs  news_frame.rs  window.rs  windows.rs
client/src/schema/: mod.rs
client/src/schema/v0/: mod.rs
client/src/schema/v1/: mod.rs
common/: Cargo.toml
common/src/: unify.rs
server/: Cargo.toml  prepare.sh
server/.cargo/: config.toml
server/.sqlx/: query-23247e963e8bd864fd32b295febd5ad2374436b0c1dd65faae560903b7596429.json  query-cf62d02a9da5658f396a36ff5401ff1d61d646b43cb3ca0afb5b398c3ae3498d.json  query-cf8ba4655b98c7cf369269503ca0d7c40a4a75d9e73dc8b8a56de2f7a0dc97cc.json  query-e526b3f03b0f5e445e97bec3f695b3b6752f050c7d2835bd515e1fdc65cc2184.json
server/migrations/: 20260330181428_init.sql  20260331220458_modify_hash_key.sql  20260404173435_reduce_vec_size.sql
server/src/: config.rs  main.rs  model.rs  unify.rs  value_enum.rs
server/src/plugins/: mod.rs
server/src/plugins/net/: mod.rs  rss_fetch.rs
server/src/plugins/parser/: common.rs  google_mrss.rs  hacker_news.rs  mod.rs  reddit.rs  rss2.rs  utils.rs  youtube.rs
server/src/plugins/source/: google_rss_search.rs  hacker_news.rs  mod.rs  reddit.rs  rss2.rs  youtube.rs
server/src/routes/: mod.rs  ws.rs
server/src/routes/api/: get_new.rs  history.rs  mod.rs
src/: main.rs  unify.rs  unify_out.rs  value_enum.rs
src/plugins/: mod.rs  rss_fetch.rs
src/plugins/net/: rss_fetch.rs
src/plugins/parser/: common.rs  google_mrss.rs  mod.rs  utils.rs
src/plugins/source/: google_rss_search.rs  mod.rs
