[package]
name = "news-aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyerr = "0.1.1"
axum = { version = "0.8.8", features = ["ws"] }# Websocket and history serving
chrono = "0.4.44"
serde_json = "1.0.149" # Data sending to client
tokio = "1.50.0"
toml = "1.0.4" # Source config
sqlx = { version = "=0.8.1", features = ["sqlite", "runtime-tokio", "chrono"] } # Store historical news
rusqlite = "=0.32.1"
async-trait = "0.1.89"
