[package]
name = "news-aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyerr = "0.1.1"
axum = { version = "0.8.8", features = ["ws"] }# Websocket and history serving
chrono = "0.4.44"
serde_json = "1.0.149" # Data sending to client
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.4" # Source config
sqlx = { version = "=0.8.1", features = ["sqlite", "runtime-tokio", "chrono"] } # Store historical news
rusqlite = "=0.32.1"
async-trait = "0.1.89"
tower-http = { version = "0.6.8", features = ["trace"] }
headers = "0.4.1"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures-util = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
once_cell = "1.21.4"
