[package]
name = "news-aggregator-client"
version = "0.1.0"
authors = ["i-am-unknown-81514525"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
common = { path = "../common/", package = "news-aggregator-common"}
serde = {version = "1.0.228", features = ["derive"] }

# You only need serde if you want app persistence:
uuid = { version = "1.22.0", features = ["js", "serde", "v7"] }
serde-versioning = "1.0.228-fix.1"
epaint = { version = "0.33.3", features = ["serde"] }

serde_json = "1.0.149"
cfg-if = "1.0.4"
ehttp = "0.6.0"
indexmap = { version = "2.13.0", features = ["serde"] }
chrono = "0.4.44"
dashmap = { version = "6.1.0", features = ["serde"] }
rkyv = "0.8.15"
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", features = ["WebSocket", "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "CloseEvent"] }
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
idb = { version = "0.6.5", default-features = false }
# to access the DOM (to hide the loading text)

#[profile.release]
#opt-level = 2 # fast and small wasm
#
## Optimize all dependencies even in debug builds:
#[profile.dev.package."*"]
#opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "main" }
# eframe = { git = "https://github.com/emilk/egui", branch = "main" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }


# ----------------------------------------------------------------------------------------
# Lints:
