[package]
name = "news-aggregator-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = {version = "0.8.1", features = ["runtime-tokio", "chrono", "postgres"], optional = true}
pgvector = { version = "0.4.1", features = ["serde", "sqlx"], optional = true }

[features]
sqlx = ["dep:sqlx", "dep:pgvector"]


[lints]
workspace = true
