[package]
name = "news-aggregator-server"
edition = "2024"
version = "0.1.0"

[dependencies]
anyerr = "0.1.1"
axum = { version = "0.8.8", features = ["ws", "default", "macros"] }# Websocket and history serving
chrono = "0.4.44"
serde_json = "1.0.149" # Data sending to client
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.4" # Source config
sqlx = { version = "=0.8.1", features = ["runtime-tokio", "chrono", "postgres", "migrate"] } # Store historical news
async-trait = "0.1.89"
tower-http = { version = "0.6.8", features = ["trace"] }
headers = "0.4.1"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures-util = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
once_cell = "1.21.4"
reqwest = { version = "0.13.2", features = ["gzip", "json", "zstd"] }
serde-xml-rs = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
reqwest-hickory-resolver = "0.3.0"
common = { path = "../common/", package = "news-aggregator-common"}
indexmap = "2.13.0"
url = "2.5.8"
ahash = "0.8.12"
rand = "0.10.0"
html-escape = { version = "0.2.13", optional = true }
html2text = { version = "0.16.7", optional = true }
fastembed = { version = "5.13.0", features = ["hf-hub", "hf-hub-native-tls", "ort-download-binaries-native-tls", "ort-load-dynamic"], default-features = false, optional = true }
pgvector = { version = "0.4.1", features = ["serde", "sqlx"] }
cfg-if = "1.0.4"

[features]
html_handle = ["dep:html-escape", "dep:html2text"]
reddit = ["html_handle"]
embedding = ["dep:fastembed"]

default = ["reddit", "embedding"]
